refactor:uncomment anyone's route

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node server",
-		"server": "nodemon server"
+		"develop": "nodemon server"
 	},
 	"author": "",
 	"license": "ISC",
